# SafeRide_Dtection

./: .gitignore  Dockerfile  README.md  config.yaml  kaggle.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
AWS Deployment/: AWS_Deployment.md  Dockerfile
AWS Deployment/src/: app.py  lambda_function.py  requirements.txt
Jupyter notebooks/Model Bias/: Plate_detection_checking_bias.ipynb  helmet_detection_checking_bias.ipynb
Model Explainablity/: helmet_detection_checking_bias.ipynb
Serving App/: Dockerfile  requirements.txt
Serving App/app/: model_handler.py
Training Deployment/: README.md  README.txt.txt  docker-compose.yml
Training Deployment Sample Run/: Dockerfile  README.md  docker-compose.yml
Training Deployment Sample Run/scripts/: helmet_training.py  plate_training.py
Training Deployment/scripts/: helmet_training.py  requirements.txt
Training Deployment/scripts_drift/: README.md  helmet_drift.py  helmet_training.py  plate_drift.py  plate_training.py  run_training.py
Training Deployment/scripts_simplified/: helmet_training_s.py  plate_training_s.py  run_training.py
notebooks/helmet_detection/: Helmet_detection_v1.ipynb  Helmet_detection_v2_extended_training.ipynb
notebooks/plate_detection/: Number_plate_detection_v1.ipynb
project_is2/: pyvenv.cfg
project_is2/Scripts/: activate  activate.bat
src/: lambda_function.py  requirements.txt
src/helmet_detection/: Helmet_detection.ipynb  model.py  (+1 more)
tests/: test_helmet_detection.py  test_number_plate_detection.py  test_ocr_utils.py  test_utils.py
(+61 files in other folders)
