[project]
name = "saferide-dtection"
version = "0.1.0"
description = ""
authors = [
    {name = "Yashsethi24"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    "ultralytics (>=8.3.118,<9.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "easyocr (>=1.7.2,<2.0.0)",
    "mlflow (>=2.22.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
